--- a/index.html
+++ b/index.html
@@ -15,62 +15,80 @@
 
   <!-- TELA 2 - Fotos -->
   <div id="screen2" class="screen hidden">
-    <h1 class="typing">Oi amor 💖, eu tenho algo pra te dizer...</h1>
-    <h2 class="fade-in">Eu te amo, Sophia 💙</h2>
+    <h1 class="typing">Oi meu bem 💖, eu só queria te dizer que...</h1>
+    <h2 class="fade-in">Eu te amo muito, Sophia 💙</h2>
 
     <div class="slideshow">
       <img src="fotos/foto1.jpg" class="active">
       <img src="fotos/foto2.jpg">
       <img src="fotos/foto3.jpg">
+      <img src="fotos/foto4.jpg">
+      <img src="fotos/foto5.jpg">
+      <img src="fotos/foto6.jpg">
+      <img src="fotos/foto7.jpg">
+      <img src="fotos/foto8.jpg">
+      <img src="fotos/foto9.jpg">
     </div>
 
-    <button id="toLetter" class="next-btn">Abrir a carta 💌</button>
-    <button onclick="goToScreen ('screen1')" >Voltar para a tela inicial</button>
+    <div class="button-container">
+      <button id="toLetter" class="next-btn">Abrir a carta 💌</button>
+      <button onclick="goToScreen('screen1')">Voltar para o início</button>
+    </div>
   </div>
 
   <!-- TELA 3 - Carta -->
   <div id="screen3" class="screen hidden">
-    <div class="letter">
-      <h2>Minha carta para você 💙</h2>
-      <p>
-        Amor, você é a melhor parte dos meus dias.<br>
-        Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
-        Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
-        Eu te amo, Sophia, infinitamente! 💙
-        Amor, você é a melhor parte dos meus dias.<br>
-        Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
-        Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
-        Eu te amo, Sophia, infinitamente! 💙
-        Amor, você é a melhor parte dos meus dias.<br>
-        Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
-        Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
-        Eu te amo, Sophia, infinitamente! 💙
-        Amor, você é a melhor parte dos meus dias.<br>
-        Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
-        Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
-        Eu te amo, Sophia, infinitamente! 💙
-        Amor, você é a melhor parte dos meus dias.<br>
-        Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
-        Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
-        Eu te amo, Sophia, infinitamente! 💙Amor, você é a melhor parte dos meus dias.<br>
-        Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
-        Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
-        Eu te amo, Sophia, infinitamente! 💙Amor, você é a melhor parte dos meus dias.<br>
-        Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
-        Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
-        Eu te amo, Sophia, infinitamente! 💙Amor, você é a melhor parte dos meus dias.<br>
-        Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
-        Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
-        Eu te amo, Sophia, infinitamente! 💙
-      </p>
-      <button onclick="goToScreen ('screen2')">Voltar</button>
+    <div class="letter-container">
+      <div class="letter">
+        <div class="letter-paper">
+          <div class="letter-content">
+            <h2>Minha carta para você 💙</h2>
+            <p>
+              Amor, você é a melhor parte dos meus dias.<br>
+              Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
+              Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
+              Eu te amo, Sophia, infinitamente! 💙
+              Amor, você é a melhor parte dos meus dias.<br>
+              Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
+              Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
+              Eu te amo, Sophia, infinitamente! 💙
+              Amor, você é a melhor parte dos meus dias.<br>
+              Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
+              Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
+              Eu te amo, Sophia, infinitamente! 💙
+              Amor, você é a melhor parte dos meus dias.<br>
+              Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
+              Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
+              Eu te amo, Sophia, infinitamente! 💙
+              Amor, você é a melhor parte dos meus dias.<br>
+              Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
+              Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
+              Eu te amo, Sophia, infinitamente! 💙Amor, você é a melhor parte dos meus dias.<br>
+              Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
+              Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
+              Eu te amo, Sophia, infinitamente! 💙Amor, você é a melhor parte dos meus dias.<br>
+              Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
+              Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
+              Eu te amo, Sophia, infinitamente! 💙Amor, você é a melhor parte dos meus dias.<br>
+              Obrigado por estar comigo, por me fazer sorrir e por me amar do jeitinho que eu sou.<br><br>
+              Quero viver muitos momentos lindos ao seu lado, hoje, amanhã e sempre. 💖<br>
+              Eu te amo, Sophia, infinitamente! 💙
+            </p>
+          </div>
+        </div>
+        <button onclick="goToScreen('screen2')">Voltar</button>
+      </div>
     </div>
+  </div>
+
+  <!-- Animação de carta abrindo -->
+  <div id="letterOpening" class="letter-opening">
+    <div class="envelope" id="openEnvelope">💌</div>
   </div>
 
   <!-- Música -->
   <audio id="music" loop>
-    <source src="musica.mp3" type="audio/mpeg">
-    Seu navegador não suporta áudio.
+    <source src="musicas/heaven.mp3" type="audio/mpeg">
   </audio>
 
   <script src="script.js"></script>
