--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- TELA 2 - Fotos -->
   <div id="screen2" class="screen hidden">
-    <h1 class="typing">Oi meu bem 💖, eu só queria te dizer que...</h1>
+    <h1 class="typing">Oi meu bem 💖,<br> eu só queria te dizer que...</h1>
     <h2 class="fade-in">Eu te amo muito, Sophia 💙</h2>
 
     <div class="slideshow">
@@ -94,3 +94,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
