--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- TELA 2 - Fotos -->
   <div id="screen2" class="screen hidden">
-    <h2 class="typing">💖Eu só queria te dizer que:</h2>
+    <h2 class="typing">Eu só queria te dizer que:</h2>
     <h3 class="fade-in">Eu te amo muito, Sophia 💙</h3>
 
     <div class="slideshow">
@@ -94,6 +94,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
